force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Adobe_Agreement_Id__c.field-meta.xml
<CustomField>
    <fullName>Adobe_Agreement_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Adobe&apos;s unique agreement ID to be used in automating the patient agreements</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Adobe Agreement Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>