force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Agreement_Id__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Id__c</fullName>
    <description>This is the Id that is stored in Biocanic to send with the initial request to internal API</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Agreement Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>