force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Agreement_Label__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agreement Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>