force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Agreement_Link_Formula__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Link_Formula__c</fullName>
    <formula>HYPERLINK( Agreement_Link__c ,  IF( Agreement_Required__c, SUBSTITUTE( Agreement_Label__c , &quot; (Optional)&quot;, &quot;&quot;) , Agreement_Label__c &amp; &apos; (Optional)&apos;) , &quot;_blank&quot;)</formula>
    <label>Agreement Link (Formula)</label>
    <type>Text</type>
</CustomField>