force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Agreement_Source__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Source__c</fullName>
    <label>Agreement Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Patient_Agreement_Platforms</valueSetName>
    </valueSet>
</CustomField>