force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/API_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Document_Type__c</fullName>
    <description>Field used for API callout documentType property when using GT UploadDocument API</description>
    <label>API Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LabRelease</fullName>
                <label>Lab Release</label>
            </value>
            <value>
                <fullName>HippaConsent</fullName>
                <label>Hippa Consent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>