force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Attestation_Only__c.field-meta.xml
<CustomField>
    <fullName>Attestation_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not used within the Salesforce platform but the 10X API will use this to determine if they need to generate a PDF or not.</description>
    <inlineHelpText>When this is checked the Generate PDF API will not generate the PDF for this PAC.</inlineHelpText>
    <label>Attestation Only</label>
    <type>Checkbox</type>
</CustomField>