force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Auto_Approved_Upon_Receive__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved_Upon_Receive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used in automation to automatically approve the Patient Agreement when we receive the form back from the patient.</description>
    <inlineHelpText>If checked, the patient agreement will be auto-approved upon receiving the signed form.</inlineHelpText>
    <label>Auto Approved Upon Receive</label>
    <type>Checkbox</type>
</CustomField>