force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Consent_Type__c.field-meta.xml
<CustomField>
    <fullName>Consent_Type__c</fullName>
    <inlineHelpText>How was consent given from the patient. Implied consent means the patient didn&apos;t have to read thru the consent to sign; where as the explicit consent is the user has read and signed this agreement.</inlineHelpText>
    <label>Consent Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Consent_Type</valueSetName>
    </valueSet>
</CustomField>