force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Form_Fill_Assessment_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Fill_Assessment_URL__c</fullName>
    <description>This field will hold the URL that has all of the form fields on it that the API will use to create the signed PDF.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will hold the URL that has all of the form fields on it that the API will use to create the signed PDF.</inlineHelpText>
    <label>Form Fill Assessment URL</label>
    <type>Url</type>
</CustomField>