force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Is_Gender_Specific__c.field-meta.xml
<CustomField>
    <fullName>Is_Gender_Specific__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the consent form is gender specific then we need to make sure the correct form is sent based on the patients gender.</description>
    <label>Is Gender Specific</label>
    <type>Checkbox</type>
</CustomField>