force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/New_Patient_Required_Form__c.field-meta.xml
<CustomField>
    <fullName>New_Patient_Required_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked this will send when there is a new Patient as well as any other configuration on this record.</inlineHelpText>
    <label>New Patient Required Form</label>
    <type>Checkbox</type>
</CustomField>