force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Number_of_Months_for_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months_for_Recurrence__c</fullName>
    <description>When the recurrence schedule is &quot;X Months&quot; this field will be required for the end user to type in how many months this consent form is required to be signed.</description>
    <label>Number of Months for Recurrence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>