force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Patient_Agreement_Configuration_Version__c.field-meta.xml
<CustomField>
    <fullName>Patient_Agreement_Configuration_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Agreement Configuration Version</label>
    <referenceTo>Patient_Agreement_Configuration_Version__c</referenceTo>
    <relationshipLabel>Patient Agreement Configurations</relationshipLabel>
    <relationshipName>Patient_Agreement_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>