force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Second_Email__c.field-meta.xml
<CustomField>
    <fullName>Second_Email__c</fullName>
    <description>the second email template that is used in the flow Send Patient.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Second Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>