force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Sub_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Family__c</fullName>
    <label>Sub Product Family(Old)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Product_Family</valueSetName>
    </valueSet>
</CustomField>