force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/Times_Sent__c.field-meta.xml
<CustomField>
    <fullName>Times_Sent__c</fullName>
    <description>Used in flow to show how many times that this agreement has been sent</description>
    <label>Times Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>