force-app/main/default/objects/Patient_Agreement_Configuration__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>