force-app/main/default/objects/Patient_Agreement_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Auto_Approved_Upon_Receive__c</columns>
    <columns>Agreement_Type__c</columns>
    <columns>New_Patient_Required_Form__c</columns>
    <columns>Is_Gender_Specific__c</columns>
    <columns>Gender__c</columns>
    <columns>Recurrence_Schedule__c</columns>
    <columns>Number_of_Months_for_Recurrence__c</columns>
    <columns>Product_Family_msp__c</columns>
    <columns>Sub_Product_Family_msp__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>